--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ jobs:
           fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v3
+        with:
+          go-version-file: 'go.mod'
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
